# aws-research-train-demo

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  mission_control_mockup.html  pyproject.toml  train.py
analysis/: explore.py
app/: app.py
dashboard/: board_template.html  ec2.go  go.mod  go.sum  live.go  main.go
docs/: cloud-setup.md
ec2/: fis.sh  launch.sh  teardown.sh  userdata.sh
scripts/: submit.py  sweep.py
src/heads/: base.py
src/heads/genomics/: __init__.py  data.py  head.py  viewer.py
src/heads/llm/: __init__.py  data.py  head.py  viewer.py
src/heads/molecular/: __init__.py  data.py  head.py  requirements.txt  viewer.py
src/heads/weather/: __init__.py  data.py  head.py  viewer.py
src/spine/: cli.py  metrics.py  registry.py  run.py
tests/: conftest.py  test_cli.py  test_contract.py  test_genomics_data.py  test_llm_data.py  test_metrics.py  test_molecular_data.py  test_tag_charset.py  test_weather_data.py
