[project]
name = "aws-research-train-demo"
version = "0.1.0"
description = "One neutral spine, four domain heads behind a contract, a Go control-plane board, three proxied surfaces. Molecular head first."
readme = "README.md"
requires-python = ">=3.12,<3.13"
# Core stays minimal: the spine dispatches to heads and fans metrics out.
# torch + numpy are the one shared dep every head's training rides on.
# Each head's own libraries live in its dependency-group below, never here.
dependencies = [
    "numpy>=2.0",
    "torch>=2.4",
]

# Per-head dependency groups, keyed to each head's `dependency_group`.
# Installing one head never drags in another's stack:
#   uv sync                      # core only
#   uv sync --group molecular    # + the molecular head's deps
[dependency-groups]
# Molecular head — see issue #2 (verify-first). PyG CORE ONLY: never add
# torch-scatter / torch-sparse / pyg-lib (the fragile torch+CUDA-pinned wheels).
molecular = [
    "rdkit>=2026.3,<2027",
    "torch-geometric>=2.8,<2.9",
    "pandas>=2.0",
]
# Weather head — see issue #9 (verify-first). Hand-rolled FNO + U-Net in plain
# torch (torch.fft.rfft2/irfft2, differentiable on CPU): NO neuraloperator (it
# drags in wandb/h5py/tensorly + a torch_harmonics compiler trap). Only matplotlib
# for the truth|pred|error triptych; torch+numpy are core.
weather = [
    "matplotlib>=3.8",
]
# Genomics head — see issue #10 (verify-first). Plain 1D CNN over synthetic
# implanted-motif DNA: torch+numpy only for train/metric (auROC hand-rolled to
# stay pure). logomaker (the standard sequence-logo lib) for the motif-logo
# viewer; it pulls matplotlib+pandas.
genomics = [
    "logomaker>=0.8.7",
]
# LLM head — see issue #11 (verify-first). trl SFTTrainer + peft LoRA on a small
# open-weight instruct model (SmolLM2-135M-Instruct, Apache-2.0, not gated). trl
# transitively brings accelerate+datasets — kept out of core. transformers<6 pin
# guards against a future v6 break.
llm = [
    "transformers>=5,<6",
    "peft>=0.19",
    "trl>=1.6",
]

# Cloud execution (stages 3+): managed jobs, spot, checkpointing, tracking.
# Kept out of core so local author/smoke needs no AWS SDK. local extra brings
# SageMaker local mode for container validation.
cloud = [
    "sagemaker[local]>=3.13,<4",
    "boto3>=1.34",
]

# Result viewers (stage 7): marimo (operator cockpit) + Streamlit (collaborator).
# Both are Python and dispatch to head.viewer(); kept out of core/heads.
viewers = [
    "marimo>=0.9",
    "streamlit>=1.40",
    "matplotlib>=3.8",
]

# Dev tooling: one formatter/linter (ruff), one type checker (mypy), pytest.
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
]

[tool.uv]
# Heads are optional installs; nothing here pulls a head group by default.
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spine", "src/heads"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "scripts"]

[tool.ruff.lint]
# Keep the seam honest: pyflakes, pycodestyle, isort, bugbear, pyupgrade.
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "scripts"]
strict = true
# Heads bring untyped scientific libs; don't fail the contract over their stubs.
# follow_imports=skip keeps mypy from parsing rdkit's (malformed) bundled stubs.
[[tool.mypy.overrides]]
module = [
    "rdkit.*", "torch_geometric.*", "sagemaker.*", "boto3.*",
    "logomaker.*", "pandas.*",
    "transformers.*", "peft.*", "trl.*", "datasets.*",
]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
